--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./lib/rpsls.js",
   "bin": {
     "node-rps": "./bin/rps-cli.js",
-    "node-rpsls": "rpsls-cli.js"
+    "node-rpsls": "./bin/rpsls-cli.js"
   },
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
